# chordcluster

./: .gitignore  pyproject.toml
code/: CNN_key_prediction.ipynb  graph_pipeline.py  scratchpad.ipynb  server.py  song_analysis_utils.py  songs_stochastic_mats.npz
gtzan/: GTZAN_Enriched_V2.csv  KeyEnumeration.txt
knn_graph/: graph_major.json  graph_minor.json  knn_graph.html
