[project]
name = "chordcluster"
version = "0.1.0"
description = "Chord-transition analysis and KNN similarity graph over the GTZAN dataset"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "jupyter>=1.0.0",
    "pandas>=2.3.3",
    "torch>=2.11.0",
    "chord-extractor>=0.1.3",
    "scienceplots>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
